--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,12 @@
 kotlin.code.style=official
 
-//kotlinVersion=1.9.20
+kotlin_version = 2.0.20
+kotlinx_serialization_version=1.7.1
+kotlinx_coroutines_version=2.0.0
 
-serializationVersion=1.7.1
-dataTimeVersion=0.6.0
-arrowVersion=1.2.4
+kotlinx_date_time_version=0.6.0
+ktor_version=2.3.12
+arrow_version=1.2.4
+logback_version = 1.5.6
+mockk_version = 1.13.2
+junit_version = 4.13.2
