--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlin.code.style=official
 kotlin_version = 2.0.20
 kotlinx_serialization_version=1.7.1
 kotlinx_coroutines_version=2.0.0
+kotest_version=5.9.1
 
 kotlinx_date_time_version=0.6.0
 ktor_version=2.3.12
